@@ -1,9 +1,9 @@
 package jk.kamoru.flayground.flay.service;
 
-import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
@@ -23,6 +23,8 @@ public class FlayArchiveServiceImpl implements FlayArchiveService {
   @Autowired FlaySource archiveFlaySource;
   @Autowired FlayFileHandler flayFileHandler;
 
+  Comparator<Flay> releaseReversedComparator = Comparator.comparing(Flay::getRelease).reversed();
+
   @Override
   public Flay get(String opus) {
     try {
@@ -34,22 +36,17 @@ public class FlayArchiveServiceImpl implements FlayArchiveService {
 
   @Override
   public Page<Flay> page(Pageable pageable, String keyword) {
-    Collection<Flay> instanceList = instanceFlaySource.list().stream().filter(f -> StringUtils.containsIgnoreCase(f.getFullname(), keyword)).collect(Collectors.toList());
-    Collection<Flay> archiveList = archiveFlaySource.list().stream().filter(f -> StringUtils.containsIgnoreCase(f.getFullname(), keyword)).collect(Collectors.toList());
+    List<Flay> foundList = Stream.concat(instanceFlaySource.list().stream(), archiveFlaySource.list().stream())
+        .filter(f -> StringUtils.containsIgnoreCase(f.toQueryString(), keyword))
+        .sorted(releaseReversedComparator)
+        .toList();
 
-    List<Flay> list = new ArrayList<>();
-    list.addAll(instanceList);
-    list.addAll(archiveList);
+    final long skip = pageable.getPageNumber() * pageable.getPageSize();
+    final long limit = pageable.getPageSize();
 
-    log.info("[page] instance: {}, archive: {}, pageable {}", instanceList.size(), archiveList.size(), pageable);
+    log.info("[page] total found: {}, skip: {}, limit {}", foundList.size(), skip, limit);
 
-    long total = list.size();
-    long skip = pageable.getPageNumber() * pageable.getPageSize();
-    long maxSize = pageable.getPageSize();
-    return new PageImpl<>(
-        list.stream().sorted((f1, f2) -> StringUtils.compare(f2.getRelease(), f1.getRelease())).skip(skip).limit(maxSize).collect(Collectors.toList()),
-        pageable,
-        total);
+    return new PageImpl<>(foundList.stream().skip(skip).limit(limit).toList(), pageable, foundList.size());
   }
 
   @Override
@@ -67,7 +64,7 @@ public class FlayArchiveServiceImpl implements FlayArchiveService {
   @Override
   public List<Flay> find(String key, String value) {
     if ("actress".equalsIgnoreCase(key)) {
-      return archiveFlaySource.list().stream().filter(f -> f.getActressList().stream().anyMatch(a -> a.equals(value))).collect(Collectors.toList());
+      return archiveFlaySource.list().stream().filter(f -> f.getActressList().stream().anyMatch(a -> a.equals(value))).sorted(releaseReversedComparator).toList();
     } else {
       throw new IllegalStateException("unknown field");
     }
@@ -78,8 +75,8 @@ public class FlayArchiveServiceImpl implements FlayArchiveService {
     return archiveFlaySource.list()
         .stream()
         .filter(f -> StringUtils.containsIgnoreCase(f.toQueryString(), query))
-        .sorted((f1, f2) -> StringUtils.compare(f2.getRelease(), f1.getRelease()))
-        .collect(Collectors.toList());
+        .sorted(releaseReversedComparator)
+        .toList();
   }
 
 }
